# syfter-enterprise

./: .gitignore  EXAMPLES.md  Makefile  README.md  SECURITY.md  TODO.md  alembic.ini  pyproject.toml  pytest.ini  security-insights.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_layer_tracking_fields.py  003_add_dependencies_and_relationships.py
docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml  env.example
docs/: BUILDING.md  DATAFLOW.md  DEPLOYMENT.md  Getting-Started.md  MULTI-STAGE-BUILDS.md  scan-inventory.csv
examples/: products.conf
manifests/: namespace.yaml
manifests/api/: admin-key-secret.yaml  buildconfig.yaml  dashboard-patch.yaml  deployment.yaml  imagestream.yaml  networkpolicy.yaml  pdb.yaml  rhsso-setup.md  route-internal.yaml  route.yaml  service.yaml
manifests/keycloak/: deployment.yaml  networkpolicy.yaml  route.yaml  service.yaml  setup-keycloak.sh  sso-client-enablement.yaml
manifests/postgres/: networkpolicy.yaml  pg-tuning-configmap.yaml  service.yaml  statefulset.yaml  stats-refresh-cronjob.yaml
manifests/s3/: bucket-policy.json  irsa-setup.sh
podman/: Containerfile  docker-compose.test.yml  docker-compose.yml  test-nuke.sh
scripts/: batch-scan.sh  export-sbom.sh  query.sh  run-tests.sh  scan-product.sh  scan-repodata.py
server/: __init__.py  auth.py  config.py  main.py  middleware.py
server/api/: exports.py  jobs.py  layers.py  products.py  queries.py  relationships.py  router.py  scans.py  schemas.py  systems.py
server/dashboard/: index.html
server/db/: __init__.py  models.py
server/storage/: base.py  local.py  s3.py
syfter/: __init__.py  cli.py  client.py  config.py  exporter.py  manipulator.py  models.py  scanner.py  storage.py
tests/: __init__.py  conftest.py  test_cli.py  test_manipulator.py  test_server.py
tests/data/: .gitkeep  sample_sbom.json
