[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syfter-enterprise"
version = "1.0.0"
description = "Enterprise SBOM platform for RPM and container image scanning at scale"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Vincent Danen", email = "vdanen@redhat.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "packageurl-python>=0.11",
    "httpx>=0.25",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "python-multipart>=0.0.6",
    "alembic>=1.13",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
all = [
    "syfter[server,dev]",
]

[project.scripts]
syfter = "syfter.cli:main"
syfter-server = "server.main:run_server"

[project.urls]
Homepage = "https://github.com/north-echo/syfter-enterprise"
Repository = "https://github.com/north-echo/syfter-enterprise"

[tool.setuptools.packages.find]
where = ["."]
include = ["syfter*", "server*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
